# context_aware_workflows

./: Presentation1.pptx  README.md  pyproject.toml
src/: clinical_diagnostic_support.py
src/playgrounds/: memory_playground_1.py  memory_playground_2.py  shared_memory_agent_1.py  shared_memory_agent_2.py
src/semantic_memory/: memory_util.py  qdrant_db.py  qdrant_helpers.py
src/workflows/: clinical_diagnostic_support.py  financial_and_risk_advisory_team.py  legal_advisory_team.py
