[project]
name = "context_aware_workflows"
version = "1.0.0"
description = "A project using agno, anthropic, openai, gemini, fastapi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=2.1.10",
    "anthropic>=0.71.0",
    "openai>=2.6.0",
    "google-genai>=1.45.0",
    "fastapi[standard]>=0.119.1",
    "ddgs>=9.6.1",
    "sqlalchemy>=2.0.44",
    "psycopg>=3.2.11",
    "psycopg-binary>=3.2.11",
    "googlesearch-python>=1.3.0",
    "pycountry>=24.6.1",
    "redis>=7.0.0",
    "qdrant-client>=1.15.1",
    "fastembed>=0.7.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"